crates/dd_tui/src/snapshots/dd_tui__tests__f1_help_snapshot.snap
---
source: crates/dd_tui/src/tests.rs
expression: text
---
┌ dd_vault ────────────────────────────────────────────────────────────────────────────── no vault ┐
│Files on disk. Opinions in git.                                                                   │
└─────────┌Key & Mouse bindings (F1 / Esc to close, j/k or arrows to scroll)─────────────┐─────────┘
┌ vault ──│Global                                                                        │─────────┐
│open a va│                                                                              │         │
│         │  • F1                Open/close this help                                    │         │
│         │  • F2                Live theme editor (source, tokens, save local/global)   │         │
│         │  • Ctrl+Q            Quit                                                    │         │
│         │  • Tab               Focus tree → editor → preview                           │         │
│         │  • gf / Enter        Follow [[wikilink]] or local markdown link under the    │         │
│         │                      caret                                                   │         │
│         │  • Ctrl+O / Ctrl+I   Jump list back / forward                                │         │
│         │  • <Space>p          Toggle markdown preview                                 │         │
│         │  • <Space>ff         File finder                                             │         │
│         │  • <Space>sg         Content search (FTS)                                    │─────────┘
│         │  • <Space>tg         Tag search                                              │─────────┐
│         │  • <Space>vv         Vault picker from any pane (d removes from the list)    │         │
│         │  • <Space>nd         Open today's daily note                                 │         │
│         │  • <Space><Space>    Command palette                                         │         │
│         │  • <Space>ai         Cycle AI card (collapsed / chat / full)                 │         │
│         │  • :ai on|off|<prompt>Enable, disable, or prompt the AI                      │ok-4.6 ─┐│
│         └──────────────────────────────────────────────────────────────────────────────┘ai      ││
└───────────────────────┘└───────────────────────────────────────────────────└────────────────────┘┘
F1: Help  Esc: Close  Ctrl+Q: Quit
