crates/dd_tui/src/snapshots/dd_tui__tests__toast_snapshot.snap
---
source: crates/dd_tui/src/tests.rs
expression: text
---
┌ dd_vault ────────────────────────────────────────────────────────────────────────────── no vault ┐
│Files on disk. Opinions in git.                                                                   │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ vault ────────────────┐┌ (no note) — NORMAL ─────────────────────────────────────────────────────┐
│open a vault to begin  ││open a note from the tree                                                │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││             ┌──────────────────────────────────────────────────────────┐│
│                       ││             │ ℹ vault ready                                            ││
│                       │└─────────────└──────────────────────────────────────────────────────────┘┘
│                       │┌ preview ────────────────────────────────────────────────────────────────┐
│                       ││open a note t┌──────────────────────────────────────────────────────────┐│
│                       ││             │ ⚠ theme skipped                                          ││
│                       ││             └──────────────────────────────────────────────────────────┘│
│                       ││                                                                         │
│                       ││                                                   ┌ AI off · grok-4.6 ─┐│
│                       ││                                                   │off  <Space>ai      ││
└───────────────────────┘└───────────────────────────────────────────────────└────────────────────┘┘
F1: Help  F2: Theme  j/k: Nav  i: Insert  :w Save  Ctrl+Q: Quit
