crates/dd_tui/src/snapshots/dd_tui__tests__zen_layout_snapshot.snap
---
source: crates/dd_tui/src/tests.rs
expression: text
---
┌ dd_vault ─────────────────────────────────────────────────────────────────────────── vault:notes ┐
│Files on disk. Opinions in git.                                                                   │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ (no note) — NORMAL ──────────────────────────────────────────────────────────────────────────────┐
│open a note from the tree                                                                         │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
F1: Help  F2: Theme  j/k: Nav  i: Insert  :w Save  Ctrl+Q: Quit
